add jacoco test config for jenkins